<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottemsheet">

        <View
            android:id="@+id/view_line"
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@color/grayishBrown_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_pass_wallet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_12"
            android:drawableRight="@drawable/ic_lock"
            android:drawablePadding="@dimen/margin_8"
            android:padding="@dimen/margin_12"
            android:text="@string/input_pass"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_line" />




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cart_number_layout"
            android:padding="@dimen/margin_2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="@dimen/margin_16"
            android:background="@drawable/bg_line"
            android:layout_marginLeft="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@+id/title_pass_wallet">

            <ImageView
                android:id="@+id/cart_im"
                android:layout_width="@dimen/margin_24"
                android:layout_height="@dimen/margin_24"
                android:src="@drawable/ic_card"
                android:layout_marginRight="@dimen/margin_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/cart_number_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_4"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white"
                android:gravity="center|right"
                android:hint="@string/cart_no"
                android:inputType="number"
                android:maxLength="16"
                android:padding="@dimen/margin_12"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textCursorDrawable="@drawable/bg_textcursor"
                android:textSize="@dimen/font_14"
                app:layout_constraintEnd_toStartOf="@+id/cart_im"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/cvv2_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginRight="@dimen/margin_12"
            android:maxLength="4"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/cvv2"
            android:inputType="number"
            android:drawablePadding="@dimen/margin_8"
            android:hint="CVV2 "
            android:gravity="center|right"
            android:textCursorDrawable="@drawable/bg_textcursor"
            android:padding="@dimen/margin_12"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/font_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_number_layout" />

        <TextView
            android:id="@+id/cvv2_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginRight="@dimen/margin_18"
            android:text="@string/message_cvv2"
            android:textColor="@color/grayishBrown_primary_variant"
            android:textSize="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvv2_et" />


        <EditText
            android:id="@+id/pass_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/ic_card"
            android:drawablePadding="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_12"
            android:gravity="center|right"
            android:hint="@string/secound_pass"
            android:maxLength="6"
            android:inputType="numberPassword"
            android:padding="@dimen/margin_12"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/bg_textcursor"
            android:textSize="@dimen/font_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_one"
            app:layout_constraintTop_toBottomOf="@+id/cvv2_message" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/timer"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:padding="@dimen/margin_12"
            android:textSize="@dimen/margin_12"
            android:textColor="@color/white"
            android:text="@string/get_ramz_poya"
            android:gravity="center"
            android:layout_marginLeft="@dimen/margin_12"
            android:background="@drawable/bg_all_corners_stroke"
            app:layout_constraintEnd_toStartOf="@+id/guideline_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvv2_message" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/year_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginRight="@dimen/margin_12"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/calendar"
            android:drawablePadding="@dimen/margin_8"
            android:gravity="center|right"
            android:hint="@string/month"
            android:inputType="number"
            android:maxLength="2"
            android:padding="@dimen/margin_12"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/bg_textcursor"
            android:textSize="@dimen/font_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_two"
            app:layout_constraintTop_toBottomOf="@+id/pass_et" />


        <EditText
            android:id="@+id/day_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_18"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/calendar"
            android:drawablePadding="@dimen/margin_8"
            android:gravity="center|right"
            android:maxLength="2"
            android:hint="@string/year"
            android:inputType="number"
            android:padding="@dimen/margin_12"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/bg_textcursor"
            android:textSize="@dimen/font_14"
            app:layout_constraintEnd_toStartOf="@+id/guideline_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_et" />

        <com.example.shoppin.customs.CustomButton
            android:id="@+id/submit_cb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_12"
            android:layout_marginBottom="@dimen/margin_12"
            android:layout_marginLeft="@dimen/margin_12"
            app:customButtonTitle="@string/continua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_one"
            app:layout_constraintTop_toBottomOf="@+id/day_et"
            app:typeButton="1" />

        <com.example.shoppin.customs.CustomButton
            android:id="@+id/back_cb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginBottom="@dimen/margin_12"
            android:layout_marginRight="@dimen/margin_12"
            app:customButtonTitle="@string/back"
            android:layout_marginLeft="@dimen/margin_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_et"
            app:typeButton="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
